my-charts/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /service-a
        pathType: Prefix # This tells the ingress controller to match requests to /service-a and anything after it. Without this, the ingress controller would only match requests to /service-a.
        backend:
          service:
            name: service-a 
            port:
              number: 80
      - path: /service-b
        pathType: Prefix
        backend:
          service:
            name: service-b
            port:
              number: 80



# one ot two file thats the question
#https://kubernetes.github.io/ingress-nginx/user-guide/basic-usage/

# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-myservice-A
# spec:
#   rules:
#   - host: myservicea.foo.org
#     http:
#       paths:
#       - path: /service-A
#         pathType: Prefix
#         backend:
#           service:
#             name: service-a
#             port:
#               number: 80
#   ingressClassName: nginx


# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress-myservice-B
# spec:
#   rules:
#   - host: myserviceb.foo.org
#     http:
#       paths:
#       - path: /service-B
#         pathType: Prefix
#         backend:
#           service:
#             name: myservice-B
#             port:
#               number: 80
#   ingressClassName: nginx
